Styled Quiz screen
optimzed desgin for small & large screens

--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,56 @@
             <h1>Test your konwldge in CoronaVirus</h1>
             <div class="button" id="start-button" onclick="generateQuestion()" >Start</div>
             <p>stay Home, <br/> Stay Safe.</p>
+            <p>Stay Home, <br/> Stay Safe.</p>
+
+        </div>
+
+
+        <div id="quiz-screen">
+            <img src="img/1.png">
+            <h2 id="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus tenetur facere accusamus?</h1>
+            
+            <div class="choise-bg">
+                <div class="number-bg">
+                    <p class="choise-number">A</p>
+                </div>
+                <div class="choise">Lorem ipsum dolor</div>
+            </div>   
+            
+            <div class="choise-bg">
+                <div class="number-bg">
+                    <p class="choise-number">B</p>
+                </div>
+                <div class="choise">Lorem ipsum dolor</div>
+            </div>
+
+            <div class="choise-bg">
+                <div class="number-bg">
+                    <p class="choise-number">C</p>
+                </div>
+                <div class="choise">Lorem ipsum dolor</div>
+            </div>
+
+            <div class="choise-bg">
+                <div class="number-bg">
+                    <p class="choise-number">D</p>
+                </div>
+                <div class="choise">Lorem ipsum dolor</div>
+            </div>
+
+            <div id="prgress">
+                <div class="progs-circle correct"></div>
+                <div class="progs-circle wrong"></div>
+                <div class="progs-circle"></div>
+                <div class="progs-circle"></div>
+                <div class="progs-circle"></div>
+                <div class="progs-circle"></div>
+                <div class="progs-circle"></div>
+                <div class="progs-circle"></div>
+                <div class="progs-circle"></div>
+                <div class="progs-circle"></div>
+                <div class="progs-circle"></div>
+            </div>            
         </div>
     </div>        
 </body>
