Remove multiple click bug
+English Text fix
+style fix

--- a/eng.html
+++ b/eng.html
@@ -46,7 +46,7 @@
             </div>        
 
             <h1>
-                improve your knowlgde,</br> read more about COVID-19
+                Improve your knowlgde,</br> Read more about COVID 19
             </h1>
             
             <a class="button" target="_blank" href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public/myth-busters">
