--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="container">
 
-        <div id="start-screen">
+        <div id="start-screen" class="flexbox">
             <img id="logo" src="img/logo.png" >
             <h1>اختبار كرونا</h1>
             <p id="slogan">خلينا نشوف تعرف قد إيه عن الفيروس علشان تبقى بأمان</p>
@@ -27,24 +27,25 @@
         </div>
 
 
-        <div id="quiz-screen" class="hidden">
+        <div id="quiz-screen" class="hidden flexbox">
             <div id="img-cotainer"></div>
 
             <h2 id="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus tenetur facere accusamus?</h1>
 
-            <div  id="choise-container"></div>
+            <div  id="choise-container" class="flexbox"></div>
 
             <div id="prgress"></div>
         </div>
 
 
-        <div id="score-screen" class="hidden">
+        <div id="score-screen" class="hidden flexbox">
             
-           <div id="emoji-container"></div> 
+           <div id="emoji-container" class="flexbox"></div> 
             <p id="score">98%</p>
 
-            <div id="answer-bar">
-            </div>        
+            <div id="answer-bar"></div>
+            
+            <div id="corection-container" class="flexbox"></div>
 
             <h1>
                 طور من معرفتك ،</br> أقراء اكتر عن covid 19
@@ -66,7 +67,7 @@
                 <span class="tracker">Tracker</span>  
             </a>
 
-            <p class="punchline">خليك في البيت، <br/> خليك بأمان.</p>
+            <p id="last-punchline" class="punchline">خليك في البيت، <br/> خليك بأمان.</p>
         </div>
     </div>        
 </body>
