--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             </a>    
             
             
-            <a dir="auto" class="button" target="_blank" href="https://www.who.int/news-room/q-a-detail/q-a-coronaviruses">
-                    <span class="who">WHO</span>
+            <a dir="auto" class="button" target="_blank" href="https://www.who.int/ar/emergencies/diseases/novel-coronavirus-2019/advice-for-public/q-a-coronaviruses">
+                    <span class="who"> الصحه العالمية</span>
                     COVID-19
             </a>
 
